--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="https://www.linkedin.com/in/lydia-dunning/" target="_blank">my LinkedIn</a>
             <a href="https://github.com/lydiadunning?tab=repositories"
                 title="Project links below" target="_blank">my GitHub</a>
-            <a href="https://docs.google.com/document/d/1gY1d_GZ1td_VsDeEksgj0Zb_6ZVAQOruoZZZ42DZy70/edit?usp=sharing" download>download my resume</a>
+            <a href="./files/Lydia_Dunning_Dev_Resume_2022.pdf" download>download my resume</a>
         </div>
     </div>
 
